...
                context,
              ).pushNamed(ConcoursCreationPage.routeName),
              child: const Text('Créer un nouveau concours'),
            ),
            const SizedBox(height: 12),
            FilledButton.tonal(
              key: const Key('home_list_concours_button'),
              onPressed: () =>
                  Navigator.of(context).pushNamed(ConcoursListPage.routeName),
              child: const Text('Liste des concours'),
            ),
          ],
        ),
...
